Refactored client repositories and their references.

--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -7,16 +7,19 @@
 		<link rel="stylesheet" type="text/css" href="/css/controles.css">
 	</head>
 	<body>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 		<script src="js/lib/momentjs/moment-with-lang.min.js"></script>
 		<script type="text/javascript" src="js/lib/numeraljs/min/numeral.min.js"></script>
 		<script type="text/javascript" src="js/lib/numeraljs/min/languages.min.js"></script>
-		<script type="text/javascript" src="js/lib/superagent/superagent.min.js"></script>
-		<!--<script type="text/javascript" src="js/lib/superagent/superagent.js"></script>-->
+		<!--<script type="text/javascript" src="js/lib/superagent/superagent.min.js"></script>-->
+		<script type="text/javascript" src="js/lib/superagent/superagent.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript" src="js/crafity.EventEmitter.js"></script>
 		<script type="text/javascript" src="js/crafity.keyboard.js"></script>
 		<script type="text/javascript" src="js/crafity.Html.js"></script>
 		<script type="text/javascript" src="js/crafity.controles.Repository.js"></script>
+		<script type="text/javascript" src="js/controles.repositories.ConstateringenRepository.js"></script>
+		<script type="text/javascript" src="js/crafity.controles.UserView.js"></script>
 		<script type="text/javascript" src="js/crafity.controles.ConstateringenView.js"></script>
 		<script type="text/javascript">
 			app.initialize();
