Added the SpecialistsRepository

--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="js/crafity.Html.js"></script>
 		<script type="text/javascript" src="js/crafity.controles.Repository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ConstateringenRepository.js"></script>
+		<script type="text/javascript" src="js/controles.repositories.SpecialistsRepository.js"></script>
 		<script type="text/javascript" src="js/crafity.controles.UserView.js"></script>
 		<script type="text/javascript" src="js/crafity.controles.ConstateringenView.js"></script>
 		<script type="text/javascript">
