Added a reference to module crafity-ui and removed the old version locally.

--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -3,20 +3,36 @@
 	<head>
 		<meta charset="utf-8">
 		<title>POC controles</title>
-		<link rel="stylesheet" type="text/css" href="/css/crafity.css">
+		<link rel="stylesheet" type="text/css" href="/js/lib/crafity-ui/css/crafity.css">
 		<link rel="stylesheet" type="text/css" href="/css/controles.css">
 	</head>
 	<body>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-		<script src="js/lib/momentjs/moment-with-lang.min.js"></script>
-		<script type="text/javascript" src="js/lib/numeraljs/min/numeral.min.js"></script>
-		<script type="text/javascript" src="js/lib/numeraljs/min/languages.min.js"></script>
-		<!--<script type="text/javascript" src="js/lib/superagent/superagent.min.js"></script>-->
+		
+		<!--[if lt IE 9]><script type="text/javascript" src="js/lib/crafity-ui/js/lib/ie-shim.js"></script><![endif]-->
+		<script type="text/javascript" src="js/lib/crafity-ui/js/lib/momentjs/moment-with-lang.min.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/lib/numeraljs/min/numeral.min.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/lib/numeraljs/min/languages.min.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.core.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.core.EventEmitter.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.keyboard.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.html.Element.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.html.Menu.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.html.Searchbox.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.List.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.Grid.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.ButtonBar.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.Button.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.Form.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.Field.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.TextField.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.DateField.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.Selectbox.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.SelectField.js"></script>
+		
 		<script type="text/javascript" src="js/lib/superagent/superagent.js"></script>
+		<!--<script type="text/javascript" src="js/lib/superagent/superagent.min.js"></script>-->
 		<script type="text/javascript" src="js/index.js"></script>
-		<script type="text/javascript" src="js/crafity.EventEmitter.js"></script>
-		<script type="text/javascript" src="js/crafity.keyboard.js"></script>
-		<script type="text/javascript" src="js/crafity.Html.js"></script>
+		
 		<script type="text/javascript" src="js/crafity.controles.Repository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ConstateringenRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.SpecialistsRepository.js"></script>
