Added new references

--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -24,6 +24,7 @@
 		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.Button.js"></script>
 		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.Form.js"></script>
 		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.Field.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.PasswordField.js"></script>
 		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.TextField.js"></script>
 		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.DateField.js"></script>
 		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.Selectbox.js"></script>
@@ -37,6 +38,7 @@
 		<script type="text/javascript" src="js/controles.repositories.ConstateringenRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.SpecialistsRepository.js"></script>
 		<script type="text/javascript" src="js/crafity.controles.UserView.js"></script>
+		<script type="text/javascript" src="js/controles.ConstateringenFilterView.js"></script>
 		<script type="text/javascript" src="js/crafity.controles.ConstateringenView.js"></script>
 		<script type="text/javascript">
 			app.initialize();
