Added login view and styling and logic

--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -5,6 +5,7 @@
 		<title>POC controles</title>
 		<link rel="stylesheet" type="text/css" href="/js/lib/crafity-ui/css/crafity.css">
 		<link rel="stylesheet" type="text/css" href="/css/controles.css">
+		<link rel="stylesheet" type="text/css" href="/js/lib/crafity-ui/css/font-face.css">
 	</head>
 	<body>
 		
@@ -29,9 +30,12 @@
 		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.DateField.js"></script>
 		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.Selectbox.js"></script>
 		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.SelectField.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.ViewContainer.js"></script>
 		
 		<script type="text/javascript" src="js/lib/superagent/superagent.js"></script>
 		<!--<script type="text/javascript" src="js/lib/superagent/superagent.min.js"></script>-->
+		<script type="text/javascript" src="js/controles.AppView.js"></script>
+		<script type="text/javascript" src="js/controles.LoginView.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
 		
 		<script type="text/javascript" src="js/crafity.controles.Repository.js"></script>
