Added a reference to the ListRepository file

--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -39,6 +39,7 @@
 		<script type="text/javascript" src="js/index.js"></script>
 		
 		<script type="text/javascript" src="js/crafity.controles.Repository.js"></script>
+		<script type="text/javascript" src="js/controles.repositories.ListRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ConstateringenRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.SpecialistsRepository.js"></script>
 		<script type="text/javascript" src="js/crafity.controles.UserView.js"></script>
