Refactored the namespacing of ConstateringenView

--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -40,13 +40,15 @@
 		
 		<script type="text/javascript" src="js/crafity.controles.Repository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ListRepository.js"></script>
+		<script type="text/javascript" src="js/controles.repositories.ControlesRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ConstateringenRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.SpecialistsRepository.js"></script>
 		<script type="text/javascript" src="js/crafity.controles.UserView.js"></script>
+		<script type="text/javascript" src="js/controles.views.ControlesView.js"></script>
 		<script type="text/javascript" src="js/controles.ConstateringenFilterView.js"></script>
-		<script type="text/javascript" src="js/crafity.controles.ConstateringenView.js"></script>
+		<script type="text/javascript" src="js/controles.views.ConstateringenView.js"></script>
 		<script type="text/javascript">
-			app.initialize();
+			controles.app.initialize();
 		</script>
 	</body>
 </html>
