--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -34,18 +34,19 @@
 		
 		<script type="text/javascript" src="js/lib/superagent/superagent.js"></script>
 		<!--<script type="text/javascript" src="js/lib/superagent/superagent.min.js"></script>-->
-		<script type="text/javascript" src="js/controles.AppView.js"></script>
-		<script type="text/javascript" src="js/controles.LoginView.js"></script>
+		<script type="text/javascript" src="js/controles.views.AppView.js"></script>
+		<script type="text/javascript" src="js/controles.views.LoginView.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
 		
-		<script type="text/javascript" src="js/crafity.controles.Repository.js"></script>
+		<script type="text/javascript" src="js/controles.repositories.AuthenticationRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ListRepository.js"></script>
+		<script type="text/javascript" src="js/controles.repositories.UsersRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ControlesRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ConstateringenRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.SpecialistsRepository.js"></script>
-		<script type="text/javascript" src="js/crafity.controles.UserView.js"></script>
+		<script type="text/javascript" src="js/controles.views.UserView.js"></script>
 		<script type="text/javascript" src="js/controles.views.ControlesView.js"></script>
-		<script type="text/javascript" src="js/controles.ConstateringenFilterView.js"></script>
+		<script type="text/javascript" src="js/controles.views.ConstateringenFilterView.js"></script>
 		<script type="text/javascript" src="js/controles.views.ConstateringenView.js"></script>
 		<script type="text/javascript">
 			controles.app.initialize();
