Added a reference to jstorage (instead of using the localStorage)

--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -7,9 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="/css/controles.css">
 		<link rel="stylesheet" type="text/css" href="/js/lib/crafity-ui/css/font-face.css">
 	</head>
-	<body>
-		
+	<body>	
 		<!--[if lt IE 9]><script type="text/javascript" src="js/lib/crafity-ui/js/lib/ie-shim.js"></script><![endif]-->
+		<script type="text/javascript" src="js/lib/crafity-ui/js/lib/jstorage.js"></script>
 		<script type="text/javascript" src="js/lib/crafity-ui/js/lib/momentjs/moment-with-lang.min.js"></script>
 		<script type="text/javascript" src="js/lib/crafity-ui/js/lib/numeraljs/min/numeral.min.js"></script>
 		<script type="text/javascript" src="js/lib/crafity-ui/js/lib/numeraljs/min/languages.min.js"></script>
