--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -2,10 +2,11 @@
 <html lang="nl">
 	<head>
 		<meta charset="utf-8">
-		<title>POC controles</title>
+		<title>DOT controles</title>
 		<link rel="stylesheet" type="text/css" href="/js/lib/crafity-ui/css/crafity.css">
 		<link rel="stylesheet" type="text/css" href="/css/controles.css">
 		<link rel="stylesheet" type="text/css" href="/js/lib/crafity-ui/css/font-face.css">
+		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"/>		
 	</head>
 	<body>	
 		<!--[if lt IE 9]><script type="text/javascript" src="js/lib/crafity-ui/js/lib/ie-shim.js"></script><![endif]-->
@@ -33,6 +34,10 @@
 		<script type="text/javascript" src="js/lib/crafity-ui/js/crafity.Html.ViewContainer.js"></script>
 		
 		<script type="text/javascript" src="js/lib/superagent/superagent.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-client/crafity.objects.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-client/crafity.Exception.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-client/crafity.common.js"></script>
+		<script type="text/javascript" src="js/lib/crafity-client/crafity.arrays.js"></script>
 		<!--<script type="text/javascript" src="js/lib/superagent/superagent.min.js"></script>-->
 		<script type="text/javascript" src="js/controles.views.AppView.js"></script>
 		<script type="text/javascript" src="js/controles.views.LoginView.js"></script>
