--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -48,6 +48,7 @@
 		<script type="text/javascript" src="js/controles.repositories.UsersRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ControlesRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ConstateringenRepository.js"></script>
+		<script type="text/javascript" src="js/controles.repositories.SpecialismsRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.SpecialistsRepository.js"></script>
 		<script type="text/javascript" src="js/controles.views.UserView.js"></script>
 		<script type="text/javascript" src="js/controles.views.ControlesView.js"></script>
