JvdB: edit controle scherm toegevoegd

--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -46,13 +46,16 @@
 		<script type="text/javascript" src="js/controles.repositories.AuthenticationRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ListRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.UsersRepository.js"></script>
+        <script type="text/javascript" src="js/controles.repositories.ControleListRepository.js"></script>
+        <script type="text/javascript" src="js/controles.repositories.ControleRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ControlesRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ConstateringenRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.StatusesRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.SpecialismsRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.SpecialistsRepository.js"></script>
 		<script type="text/javascript" src="js/controles.views.UserView.js"></script>
-		<script type="text/javascript" src="js/controles.views.ControlesView.js"></script>
+        <script type="text/javascript" src="js/controles.views.ControleView.js"></script>
+        <script type="text/javascript" src="js/controles.views.ControlesView.js"></script>
 		<script type="text/javascript" src="js/controles.views.ConstateringenFilterView.js"></script>
 		<script type="text/javascript" src="js/controles.views.ConstateringenView.js"></script>
 		<script type="text/javascript">
