Flexible controleHeader added

--- a/file_server/content/index.html
+++ b/file_server/content/index.html
@@ -48,6 +48,7 @@
 		<script type="text/javascript" src="js/controles.repositories.UsersRepository.js"></script>
         <script type="text/javascript" src="js/controles.repositories.ControleListRepository.js"></script>
         <script type="text/javascript" src="js/controles.repositories.ControleRepository.js"></script>
+        <script type="text/javascript" src="js/controles.repositories.ControleHeaderRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ControlesRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.ConstateringenRepository.js"></script>
 		<script type="text/javascript" src="js/controles.repositories.StatusesRepository.js"></script>
